# clever_code

./: CMakeLists.txt
find_odd/: find_odd.cpp
palindrome/: palindrome.cpp
